src/objects/Payments__c.object
<CustomObject>
    <description>Payments</description>
    <fields>
        <fullName>Account__c</fullName>
        <description>Account this payment is associated with</description>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Payments</relationshipLabel>
        <relationshipName>Payments</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Additional_Payments_Due__c</fullName>
        <label>Additional Payments Due?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Amount_Due__c</fullName>
        <formula>If_Insurance_Amount_to_Pay__c +  If_PN_Amount_Due__c +  If_Private_Pay_Amount_to_Pay__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Amount Due</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Credit_Card_Number__c</fullName>
        <label>Credit Card Number</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <formula>TODAY()</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Day_Today__c</fullName>
        <formula>DAY(TODAY())</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Day Today</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Due_Day__c</fullName>
        <formula>DAY(  PN_Due_Date__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Due Day</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Due_Month__c</fullName>
        <formula>CASE(MONTH( PN_Due_Date__c ),
1, &quot;January&quot;,
2, &quot;February&quot;,
3, &quot;March&quot;,
4, &quot;April&quot;,
5, &quot;May&quot;,
6, &quot;June&quot;,
7, &quot;July&quot;,
8, &quot;August&quot;,
9, &quot;September&quot;,
10, &quot;October&quot;,
11, &quot;November&quot;,
12, &quot;December&quot;,
&quot;None&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Due Month</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Due_Year__c</fullName>
        <formula>TEXT(YEAR(  PN_Due_Date__c  ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Due Year</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Expiration_Date__c</fullName>
        <label>Expiration Date</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Facility__c</fullName>
        <label>Facility</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Haven Detox</fullName>
                </value>
                <value>
                    <fullName>The Recovery Team</fullName>
                </value>
                <value>
                    <fullName>Indiana Center for Recovery</fullName>
                </value>
                <value>
                    <fullName>Lake Ave</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Guarantor_Address__c</fullName>
        <label>Guarantor Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Guarantor_Email__c</fullName>
        <label>Guarantor Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Guarantor_Name__c</fullName>
        <label>Guarantor Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Guarantor_Phone__c</fullName>
        <label>Guarantor Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>If_Insurance_Amount_to_Pay__c</fullName>
        <label>If Insurance, Amount to Pay</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>If_PN_Amount_Due__c</fullName>
        <label>If PN, Amount Due</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>If_Private_Pay_Amount_to_Pay__c</fullName>
        <label>If Private Pay, Amount to Pay</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Month_Today__c</fullName>
        <formula>CASE(MONTH(TODAY()),
1, &quot;January&quot;,
2, &quot;February&quot;,
3, &quot;March&quot;,
4, &quot;April&quot;,
5, &quot;May&quot;,
6, &quot;June&quot;,
7, &quot;July&quot;,
8, &quot;August&quot;,
9, &quot;September&quot;,
10, &quot;October&quot;,
11, &quot;November&quot;,
12, &quot;December&quot;,
&quot;None&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Month Today</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Next_Payment_Amount_Due__c</fullName>
        <label>Next Payment Amount Due:</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Next_Payment_Due_Date__c</fullName>
        <label>Next Payment Due Date:</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Next_Payment_Generated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Next Payment Generated?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Payments</relationshipLabel>
        <relationshipName>Payments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PN_Due_Date__c</fullName>
        <formula>TODAY() + 180</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PN Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Payment_Due_on__c</fullName>
        <label>Payment Due on:</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Payment_Received__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Payment Received</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Populate_Next_Payment_With_Same_Info__c</fullName>
        <label>Populate Next Payment With Same Info?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Security_Code__c</fullName>
        <label>Security Code</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Signed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Agreement Signed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Stipulations_Notes__c</fullName>
        <label>Stipulations/Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Year_Today__c</fullName>
        <formula>TEXT(YEAR( Date__c ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Year Today</label>
        <type>Text</type>
    </fields>
    <label>Payment</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Completed_Payments</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Payment_Due_on__c</columns>
        <columns>Payment_Received__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Payment_Received__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Completed Payments</label>
    </listViews>
    <listViews>
        <fullName>Past_Due_Payments</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Payment_Due_on__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Payment_Due_on__c</field>
            <operation>lessOrEqual</operation>
            <value>11/28/2020</value>
        </filters>
        <filters>
            <field>Payment_Received__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>Past Due Payments</label>
    </listViews>
    <listViews>
        <fullName>Upcoming_Due_Payments</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Payment_Due_on__c</columns>
        <columns>Amount_Due__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Payment_Received__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>Payment_Due_on__c</field>
            <operation>greaterOrEqual</operation>
            <value>11/27/2020</value>
        </filters>
        <label>Upcoming Due Payments</label>
    </listViews>
    <nameField>
        <label>Payment Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Payments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>